--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -28,6 +28,7 @@
       grid-row: 1 / span 1;
       justify-self: start;
       align-self: start;
+      line-height: 0.4;
     }
 
     &--detail {
