--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,21 @@ body::before {
     background-position: 100%;
     transform: translateX(1rem); }
 
+.social-icons {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; }
+  .social-icons__icon-item {
+    display: inline-block; }
+  .social-icons__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%; }
+  .social-icons__icon {
+    transition: all 0.2s; }
+
 .about__content,
 .about__picture,
 .portfolio {
@@ -337,29 +352,18 @@ body::before {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, min-content);
     grid-gap: 5rem; }
-  .about__content--social-icons {
-    list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center; }
   .about__content--icon-item {
-    display: inline-block;
     margin-right: 2rem; }
   .about__content--link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 4.5rem;
     height: 4.5rem;
-    border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.08); }
     .about__content--link:hover .about__content--icon {
       fill: #fff; }
   .about__content--icon {
     height: 2rem;
     width: 2rem;
-    fill: #2f89fc;
-    transition: all 0.2s; }
+    fill: #2f89fc; }
   .about__content--contact-detail {
     margin-top: -3rem; }
 
@@ -536,17 +540,39 @@ body::before {
   .contact__form-box {
     grid-row: 2 / -1;
     grid-column: 1 / -1;
-    row-gap: 3rem;
+    display: flex;
+    justify-content: space-between;
     background-image: linear-gradient(105deg, rgba(18, 18, 18, 0.9) 0%, rgba(18, 18, 18, 0.9) 55%, transparent 55%), url(../img/xwork-3.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     padding: 6rem; }
+  .contact__social-icons-box {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   .contact__form-heading {
     margin-bottom: 6rem; }
+  .contact--social-icons {
+    flex-direction: column; }
+  .contact--icon-item:not(:last-child) {
+    margin-bottom: 2rem; }
+  .contact--link {
+    width: 3.3rem;
+    height: 3.3rem;
+    background-color: rgba(18, 18, 18, 0.8);
+    border: 1px solid #2f89fc; }
+    .contact--link:hover .contact--icon {
+      fill: #fff; }
+    .contact--link:hover.contact--link {
+      border-color: #fff; }
+  .contact--icon {
+    height: 1.4rem;
+    width: 1.4rem;
+    fill: #2f89fc; }
 
 .form__group {
-  width: 40%; }
+  width: 59%; }
 
 .form__group:not(:last-child) {
   margin-bottom: 1rem; }
@@ -613,4 +639,5 @@ body::before {
     text-align: center;
     font-size: 1.5rem; }
   .footer__link, .footer__link:visited, .footer__link:link {
-    text-decoration: none; }
+    text-decoration: none;
+    text-transform: uppercase; }
