--- a/sass/_miscellaneous.scss
+++ b/sass/_miscellaneous.scss
@@ -48,6 +48,7 @@
 // LAYOUT MARGINS
 .about__content,
 .about__picture,
+.services,
 .portfolio {
-  margin-bottom: 20rem;
+  padding-bottom: 20rem;
 }
