--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body::before {
   font-weight: 300; }
 
 .bold-heading {
-  font-size: 13vw;
+  font-size: 8vw;
   line-height: 0.7;
   color: rgba(255, 255, 255, 0.08);
   letter-spacing: 0.6rem; }
@@ -139,8 +139,9 @@ body::before {
 
 .about__content,
 .about__picture,
+.services,
 .portfolio {
-  margin-bottom: 20rem; }
+  padding-bottom: 20rem; }
 
 .header {
   grid-column: grid-col-start / grid-col-end;
@@ -152,7 +153,8 @@ body::before {
   .header__logo-box {
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    z-index: 3; }
   .header__logo {
     max-width: 250px;
     height: auto; }
@@ -292,7 +294,9 @@ body::before {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin-top: -12rem;
+  z-index: 2; }
   .hero-section__heading {
     margin: 1rem 0;
     text-align: center; }
@@ -341,7 +345,8 @@ body::before {
     grid-row: 1 / span 1;
     justify-self: start;
     align-self: start;
-    line-height: 0.4; }
+    line-height: 0.4;
+    font-size: 12vw; }
   .about__content--detail {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
@@ -372,10 +377,10 @@ body::before {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: min-content min-content;
-  grid-gap: 18rem;
+  grid-gap: 16rem;
+  align-content: center;
   height: 100vh; }
   .services__heading-1 {
-    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
@@ -418,10 +423,9 @@ body::before {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: min-content min-content;
-  grid-gap: 18rem;
+  grid-gap: 16rem;
   padding-top: 5rem; }
   .portfolio__heading-1 {
-    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
@@ -522,9 +526,8 @@ body::before {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: min-content min-content;
-  grid-gap: 18rem; }
+  grid-gap: 16rem; }
   .contact__heading-1 {
-    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
@@ -571,66 +574,62 @@ body::before {
     width: 1.4rem;
     fill: #2f89fc; }
 
-.form__group {
-  width: 59%; }
-
-.form__group:not(:last-child) {
-  margin-bottom: 1rem; }
-
-.form__input {
-  font-size: 1.4rem;
-  padding: 1.5rem 0;
-  width: 100%;
-  background-color: transparent;
-  border: none;
-  border-radius: 1px;
-  color: #fff;
-  font-family: inherit;
-  font-weight: 300;
-  border-bottom: 1.7px solid rgba(255, 255, 255, 0.08);
-  display: block;
-  letter-spacing: 0.7px;
-  transition: all 0.5s; }
-  .form__input:focus {
-    outline: none;
-    border-color: #2f89fc; }
-  .form__input::-webkit-input-placeholder {
+.form {
+  width: 50%; }
+  .form__group {
+    width: 80%; }
+  .form__group:not(:last-child) {
+    margin-bottom: 1rem; }
+  .form__input {
     font-size: 1.4rem;
-    font-family: inherit;
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: 300; }
-  .form__input::placeholder {
-    font-size: 1.4rem;
-    font-family: inherit;
-    color: rgba(255, 255, 255, 0.6);
-    font-weight: 300; }
-
-.form__input:placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4.2rem); }
-
-.form__label {
-  font-size: 1.2rem;
-  font-weight: 400;
-  margin-top: 0.7rem;
-  display: block;
-  transition: all 0.3s; }
-
-.form__submit {
-  color: #121212;
-  font-size: 1.4rem;
-  font-family: inherit;
-  font-weight: 400;
-  letter-spacing: 0.4rem;
-  padding: 0.8rem 1rem;
-  text-transform: uppercase;
-  border: none;
-  background-color: #2f89fc;
-  width: 100%; }
-  .form__submit:hover {
+    padding: 1.5rem 0;
+    width: 100%;
+    background-color: transparent;
+    border: none;
     color: #fff;
-    background-color: #121212; }
+    font-family: inherit;
+    font-weight: 300;
+    border-bottom: 1.7px solid rgba(255, 255, 255, 0.08);
+    display: block;
+    letter-spacing: 0.7px;
+    transition: all 0.5s; }
+    .form__input:focus {
+      outline: none;
+      border-color: #2f89fc; }
+    .form__input::-webkit-input-placeholder {
+      font-size: 1.4rem;
+      font-family: inherit;
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 300; }
+    .form__input::placeholder {
+      font-size: 1.4rem;
+      font-family: inherit;
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 300; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4.2rem); }
+  .form__label {
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s; }
+  .form__submit {
+    color: #121212;
+    font-size: 1.4rem;
+    font-family: inherit;
+    font-weight: 400;
+    letter-spacing: 0.4rem;
+    padding: 0.8rem 1rem;
+    text-transform: uppercase;
+    border: none;
+    background-color: #2f89fc;
+    width: 100%; }
+    .form__submit:hover {
+      color: #fff;
+      background-color: #121212; }
 
 .footer {
   grid-column: grid-col-start / grid-col-end;
