--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -4,11 +4,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: min-content min-content;
-  grid-gap: 18rem;
+  grid-gap: 16rem;
+  align-content: center;
   height: 100vh;
 
   &__heading-1 {
-    font-size: 10vw;
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
