--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -39,6 +39,16 @@
     background-position: center center;
     background-repeat: no-repeat;
     padding: 6rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      background-image: linear-gradient(
+          105deg,
+          rgba($bg-color, 0.9) 0%,
+          rgba($bg-color, 0.9) 70%,
+          transparent 70%
+        ),
+        url(../img/xwork-3.jpg);
+    }
   }
 
   &__social-icons-box {
@@ -85,6 +95,10 @@
   width: 50%;
   &__group {
     width: 80%;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    width: 75%;
   }
 
   &__group:not(:last-child) {
