--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -15,6 +15,9 @@
   @media only screen and (max-width: $bp-large) {
     font-size: 3rem;
   }
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 2.2rem;
+  }
 }
 
 .heading-3 {
@@ -45,6 +48,10 @@
 
   @media only screen and (max-width: $bp-large) {
     font-size: 12rem;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 9rem;
   }
 }
 
