--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -62,6 +62,10 @@
       grid-template-columns: 1fr;
       grid-template-rows: repeat(6, min-content);
       grid-gap: 5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        padding: 2rem 7rem;
+      }
     }
 
     &--icon-item {
