--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,7 +30,7 @@ html {
   font-size: 62.5%; // 10/16 = 62.5%  1rem = 10px
 
   @media only screen and (max-width: $bp-largest) {
-    font-size: 50%;
+    font-size: 57%;
   }
 }
 
@@ -87,4 +87,15 @@ body::before {
     [grid-col-end]
     minmax(4rem, 1fr)
     [full-end];
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-columns:
+      [full-start]
+      minmax(2rem, 1fr)
+      [grid-col-start]
+      repeat(12, [col-start] minmax(min-content, 9.5rem) [col-end])
+      [grid-col-end]
+      minmax(2rem, 1fr)
+      [full-end];
+  }
 }
