--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -8,6 +8,10 @@
   align-content: center;
   height: 100vh;
 
+  @media only screen and (max-width: $bp-medium) {
+    height: auto;
+  }
+
   &__heading-1 {
     letter-spacing: 0rem;
     grid-row: 1 / span 1;
