--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,7 @@ $font-primary: "Poppins", Arial, sans-serif;
 $bp-largest: 71.875em; //1150px
 $bp-large: 58.125em; //930px
 $bp-medium: 52.5em; //840px
+$bp-note8: 25.875em; //840px
 
 *,
 *::after,
