--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -11,6 +11,10 @@
   &__heading {
     margin: 1rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-note8) {
+      font-size: 2.5rem;
+    }
   }
 }
 
