--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,9 @@ body::before {
   @media only screen and (max-width: 52.5em) {
     .bold-heading {
       font-size: 9rem; } }
+  @media only screen and (max-width: 25.875em) {
+    .bold-heading {
+      font-size: 7rem; } }
 
 .title-paragraph {
   color: rgba(255, 255, 255, 0.6);
@@ -180,6 +183,9 @@ body::before {
   .header__logo {
     max-width: 250px;
     height: auto; }
+    @media only screen and (max-width: 25.875em) {
+      .header__logo {
+        max-width: 150px; } }
   .header__navigation {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -322,6 +328,9 @@ body::before {
   .hero-section__heading {
     margin: 1rem 0;
     text-align: center; }
+    @media only screen and (max-width: 25.875em) {
+      .hero-section__heading {
+        font-size: 2.5rem; } }
 
 .cta,
 .cta:visited,
@@ -384,6 +393,10 @@ body::before {
     @media only screen and (max-width: 58.125em) {
       .about__content--heading {
         font-size: 12rem; } }
+    @media only screen and (max-width: 25.875em) {
+      .about__content--heading {
+        padding: 0;
+        font-size: 10rem; } }
   .about__content--detail {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
@@ -397,6 +410,9 @@ body::before {
     @media only screen and (max-width: 52.5em) {
       .about__content--detail {
         padding: 2rem 7rem; } }
+    @media only screen and (max-width: 25.875em) {
+      .about__content--detail {
+        padding: 2rem 3rem; } }
   .about__content--icon-item {
     margin-right: 2rem; }
   .about__content--link {
@@ -599,6 +615,9 @@ body::before {
     @media only screen and (max-width: 52.5em) {
       .contact__form-box {
         background-image: linear-gradient(105deg, rgba(18, 18, 18, 0.9) 0%, rgba(18, 18, 18, 0.9) 70%, transparent 70%), url(../img/xwork-3.jpg); } }
+    @media only screen and (max-width: 25.875em) {
+      .contact__form-box {
+        padding: 3rem; } }
   .contact__social-icons-box {
     display: flex;
     justify-content: center;
@@ -630,6 +649,9 @@ body::before {
   @media only screen and (max-width: 52.5em) {
     .form {
       width: 75%; } }
+  @media only screen and (max-width: 25.875em) {
+    .form {
+      width: 90%; } }
   .form__group:not(:last-child) {
     margin-bottom: 1rem; }
   .form__input {
