--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -49,6 +49,10 @@
         ),
         url(../img/xwork-3.jpg);
     }
+
+    @media only screen and (max-width: $bp-note8) {
+      padding: 3rem;
+    }
   }
 
   &__social-icons-box {
@@ -99,6 +103,9 @@
 
   @media only screen and (max-width: $bp-medium) {
     width: 75%;
+  }
+  @media only screen and (max-width: $bp-note8) {
+    width: 90%;
   }
 
   &__group:not(:last-child) {
