--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -53,6 +53,10 @@
   @media only screen and (max-width: $bp-medium) {
     font-size: 9rem;
   }
+
+  @media only screen and (max-width: $bp-note8) {
+    font-size: 7rem;
+  }
 }
 
 .title-paragraph {
