--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ html {
   @media only screen and (max-width: 71.875em) {
     html {
       font-size: 57%; } }
+  @media only screen and (max-width: 25.875em) {
+    html {
+      font-size: 48%; } }
 
 body {
   font-family: "Poppins", Arial, sans-serif;
