--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,6 +33,10 @@ html {
   @media only screen and (max-width: $bp-largest) {
     font-size: 57%;
   }
+
+  @media only screen and (max-width: $bp-note8) {
+    font-size: 48%;
+  }
 }
 
 body {
