--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,26 @@ body::before {
   .about__picture {
     padding-bottom: 5rem; } }
 
+/* Style the header: fixed position (always stay at the top) */
+.header1 {
+  position: fixed;
+  top: 0;
+  z-index: 99999;
+  width: 100%; }
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #121212; }
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #2f89fc;
+  width: 0%;
+  transition: all 0.5s ease-in-out; }
+
 .header {
   grid-column: grid-col-start / grid-col-end;
   grid-row: 1 / 2;
@@ -368,7 +388,8 @@ body::before {
     width: auto;
     max-height: 567px;
     filter: grayscale(3);
-    z-index: -1; }
+    z-index: -1;
+    transition: all 0.25s ease-out; }
     @media only screen and (max-width: 52.5em) {
       .about__picture--img {
         max-width: 95%;
@@ -517,7 +538,9 @@ body::before {
     width: 38%;
     overflow: hidden;
     z-index: 1;
-    backface-visibility: hidden; }
+    backface-visibility: hidden;
+    transition: all 0.25s ease-out;
+    transform: translateY(200px); }
   .portfolio-block__img {
     display: block;
     position: relative;
