--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -16,7 +16,8 @@
       max-height: 567px;
       filter: grayscale(3);
       z-index: -1;
-      // transform: translateY(39.416%);
+      transition: all 0.25s ease-out;
+      // transform: translateY(200px);
 
       @media only screen and (max-width: $bp-medium) {
         max-width: 95%;
