--- a/sass/_miscellaneous.scss
+++ b/sass/_miscellaneous.scss
@@ -58,3 +58,28 @@
     padding-bottom: 5rem;
   }
 }
+
+//////// Progress Bar
+
+/* Style the header: fixed position (always stay at the top) */
+.header1 {
+  position: fixed;
+  top: 0;
+  z-index: 99999;
+  width: 100%;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: $bg-color;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: $color-secondary;
+  width: 0%;
+  transition: all 0.5s ease-in-out;
+}
