--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -26,6 +26,9 @@
         justify-content: center;
         z-index: 1;
       }
+      @media only screen and (max-width: $bp-note8) {
+        transition: none;
+      }
     }
   }
 
