--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -26,7 +26,7 @@
         justify-content: center;
         z-index: 1;
       }
-      @media only screen and (max-width: $bp-note8) {
+      @media only screen and (max-width: $bp-small) {
         transition: none;
       }
     }
@@ -43,6 +43,9 @@
     @media only screen and (max-width: $bp-medium) {
       grid-column: col-start 2 / col-end 11;
     }
+    @media only screen and (max-width: $bp-smallest) {
+      grid-column: full-start / full-end;
+    }
 
     &--heading {
       grid-column: 1 / -1;
@@ -55,7 +58,7 @@
         font-size: 12rem;
       }
 
-      @media only screen and (max-width: $bp-note8) {
+      @media only screen and (max-width: $bp-small) {
         padding: 0;
         font-size: 10rem;
       }
@@ -76,7 +79,7 @@
         padding: 2rem 7rem;
       }
 
-      @media only screen and (max-width: $bp-note8) {
+      @media only screen and (max-width: $bp-small) {
         padding: 2rem 3rem;
       }
     }
