--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -21,6 +21,12 @@
     display: block;
 
     backface-visibility: hidden;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0;
+      font-size: 1.6rem;
+      text-align: center;
+    }
   }
 
   &__form-box {
@@ -50,7 +56,7 @@
         url(../img/xwork-3.jpg);
     }
 
-    @media only screen and (max-width: $bp-note8) {
+    @media only screen and (max-width: $bp-small) {
       padding: 3rem;
     }
   }
@@ -104,7 +110,7 @@
   @media only screen and (max-width: $bp-medium) {
     width: 75%;
   }
-  @media only screen and (max-width: $bp-note8) {
+  @media only screen and (max-width: $bp-small) {
     width: 90%;
   }
 
