--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -17,7 +17,7 @@
     max-width: 250px;
     height: auto;
 
-    @media only screen and (max-width: $bp-note8) {
+    @media only screen and (max-width: $bp-small) {
       max-width: 150px;
     }
   }
