--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -12,7 +12,7 @@
     margin: 1rem 0;
     text-align: center;
 
-    @media only screen and (max-width: $bp-note8) {
+    @media only screen and (max-width: $bp-small) {
       font-size: 3rem;
     }
   }
