--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -29,6 +29,10 @@
     display: inline-block;
 
     backface-visibility: hidden;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0;
+    }
   }
 
   &__cards {
