--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -18,6 +18,9 @@
   @media only screen and (max-width: $bp-medium) {
     font-size: 2.2rem;
   }
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 1.2rem;
+  }
 }
 
 .heading-3 {
@@ -54,8 +57,12 @@
     font-size: 9rem;
   }
 
-  @media only screen and (max-width: $bp-note8) {
+  @media only screen and (max-width: $bp-small) {
     font-size: 7rem;
+  }
+
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 5rem;
   }
 }
 
