--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -10,6 +10,10 @@
     grid-row: 1 / span 1;
     grid-column: 1 / span 3;
     text-align: center;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 6rem !important;
+    }
   }
 
   &__heading-2 {
