--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,6 +6,12 @@ $dull-dark-2: rgba(255, 255, 255, 0.08);
 $color-primary: #8c8c8c;
 $color-secondary: #2f89fc;
 $color-light: #fff;
+$html: #e34f26;
+$css: #1572b6;
+$JS: #f7df1e;
+$sass: #cc6699;
+$git: #fb4f28;
+$bootstrap: #7952b3;
 
 // FONTS
 
